--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Mr.Abayoss</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container mt-4">
         <h2>Oussma abaayous</h2>
         <div class="row">
             <div class="col-md-6">
@@ -20,11 +20,18 @@
             </div>
         </div>
         <h3>Contact</h3>
-        <ul>
-            <li><i class="fa fa-instagram" aria-hidden="true"></i> instagram</li>
-            <li><i class="fa fa-facebook" aria-hidden="true"></i> Facebook</li>
-            <li><i class="fa fa-github" aria-hidden="true"></i> Github</li>
-        </ul>
+        <div class="list-group text-center">
+            <a href="https://www.instagram.com/mr_abayoss/" target="#" class="list-group-item list-group-item-action">instagram
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.facebook.com/Mr.abayoss" target="#" class="list-group-item list-group-item-action">Facebook
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.github.com/abayoss" target="#" class="list-group-item list-group-item-action">Github
+                <i class="fa fa-github" aria-hidden="true"></i>
+            </a>
+        </div>
+
     </div>
 
     
