--- a/index.html
+++ b/index.html
@@ -1,39 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/cyborg/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Mr.Abayoss</title>
-</head>
-<body>
-    <div class="container mt-4">
-        <h2>Oussma abaayous</h2>
-        <div class="row">
-            <div class="col-md-6">
-                <p>I’m a moroccan fullstack developer.
-                    I dedicate my time to develop products and create useful services,
-                    mostly built with Angular.
-                </p>
-            </div>
+  </head>
+  <body>
+    <section>
+      <div class="container VH secondPage">
+        <div class="row slideRight">
+          <div class="col-md-7">
+            <h2>Oussma abaayous</h2>
+            <p>
+              I’m a moroccan fullstack developer. I dedicate my time to develop
+              products and create useful services, mostly built with Angular.
+            </p>
+          </div>
+          <div class="list-group text-left slideRight col-md-4 ml-3">
+            <h3>Contact</h3>
+            <a
+              href="https://www.instagram.com/mr_abayoss/"
+              target="#"
+              class="list-group-item list-group-item-action"
+            >
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+              instagram
+            </a>
+            <a
+              href="https://www.facebook.com/Mr.abayoss"
+              target="#"
+              class="list-group-item list-group-item-action"
+            >
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+              Facebook
+            </a>
+            <a
+              href="https://www.github.com/abayoss"
+              target="#"
+              class="list-group-item list-group-item-action"
+            >
+              <i class="fa fa-github" aria-hidden="true"></i>
+              Github
+            </a>
+          </div>
         </div>
-        <h3>Contact</h3>
-        <div class="list-group text-center">
-            <a href="https://www.instagram.com/mr_abayoss/" target="#" class="list-group-item list-group-item-action">instagram
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-            </a>
-            <a href="https://www.facebook.com/Mr.abayoss" target="#" class="list-group-item list-group-item-action">Facebook
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="https://www.github.com/abayoss" target="#" class="list-group-item list-group-item-action">Github
-                <i class="fa fa-github" aria-hidden="true"></i>
-            </a>
-        </div>
-
-    </div>
-
-    
-</body>
+      </div>
+    </section>
+    <section class="intro V-H">
+      <h2 class="black slideRight">to be continued...</h2>
+    </section>
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="assets/js/Scroll.js"></script>
+  </body>
 </html>
