--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://bootswatch.com/4/cyborg/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    <!-- icons / theme color -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -37,13 +30,24 @@
     />
     <meta name="msapplication-TileColor" content="#9f00a7" />
     <meta name="theme-color" content="#ffffff" />
+
+    <!-- bootswatch / font awesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/4/cyborg/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <!-- Main css -->
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Mr.Abaayous</title>
   </head>
   <body>
     <!-- nav bar : Logo -     - about - Work - CTA contact me  -->
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-none fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="img/SVG/ab_Logo_White.svg" width="30" height="30" alt="" />
@@ -74,18 +78,21 @@
         </div>
       </div>
     </nav>
+
     <!-- first section : introduction  -->
-    <section>
+    <section class="blackBack">
       <div class="container">
-        <div class="VH secondPage">
-          <div class="row slideRight">
-            <div class="col-md-7">
-              <h2>Oussma abaayous</h2>
-              <p>
-                I’m a moroccan fullstack developer. I dedicate my time to
-                develop products and create useful services, mostly built with
-                Angular.
-              </p>
+        <div class="VH SP">
+          <div class="row">
+            <div class="col-md-8">
+              <h2 class="slideRight">Oussma abaayous</h2>
+              <h6 class="mt-3  slideUp">
+                I’m a Moroccan Fullstack Web Developer, based in Rabat.
+              </h6>
+              <h6 class=" slideUp">
+                I dedicate my time to develop products and create useful
+                services, mostly built with Angular and Express.
+              </h6>
             </div>
           </div>
         </div>
@@ -98,11 +105,13 @@
         <!-- end Scroll Down Button -->
       </div>
     </section>
-    <section class="intro pt-5" id="work">
+
+    <!-- Work Section  -->
+    <section class="Grey pt-5" id="work">
       <div class="container pt-4">
-        <h3 class="black slideRight">Work</h3>
+        <h3 class="black slideUp">Work</h3>
         <div class="card-deck pt-2">
-          <div class="card slideRight">
+          <div class="card border-light slideRight">
             <div class="card-header">
               <img
                 class="card-img-top"
@@ -110,13 +119,13 @@
                 alt=""
               />
             </div>
-            <div class="card-body">
+            <div class="card-body slideRight">
               <h4 class="card-title">Project 1</h4>
               <p class="card-text">Project Description</p>
             </div>
             <div class="card-footer text-muted slideRight">
-              <a name="" id="" class="btn btn-info btn btn-sm btn-block active"
-                >GitHub Code</a
+              <a name="" id="" href="" class="btn btn-info btn-block active"
+                ><i class="fa fa-github" aria-hidden="true"></i> GitHub Code</a
               >
               <a name="" id="" class="btn btn-info btn-sm btn-block "
                 >Live Demo
@@ -136,8 +145,8 @@
               <p class="card-text">Project Description</p>
             </div>
             <div class="card-footer text-muted slideRight">
-              <a name="" id="" class="btn btn-info btn btn-sm btn-block active"
-                >GitHub Code</a
+              <a name="" id="" href="" class="btn btn-info  btn-block active"
+                ><i class="fa fa-github" aria-hidden="true"></i> GitHub Code</a
               >
               <a name="" id="" class="btn btn-info btn-sm btn-block "
                 >Live Demo
@@ -157,24 +166,19 @@
               <p class="card-text">Project Description</p>
             </div>
             <div class="card-footer slideRight">
-              <a name="" id="" class="btn btn-info btn btn-sm btn-block active"
-                >GitHub Code</a
+              <a name="" id="" href="" class="btn btn-info btn-block active"
+                ><i class="fa fa-github" aria-hidden="true"></i> GitHub Code</a
               >
               <a name="" id="" class="btn btn-info btn-sm btn-block"
                 >Live Demo
               </a>
             </div>
           </div>
-          <!-- begin Scroll Down Button -->
-          <button
-            type="button"
-            class="scroll_down slideUP"
-            id="scroll_down"
-          ></button>
-          <!-- end Scroll Down Button -->
         </div>
       </div>
     </section>
+
+    <!-- Contact Form and info Section -->
     <Section id="contact" class="pt-5">
       <div class="container pt-5">
         <div class="row">
@@ -235,7 +239,7 @@
                   id=""
                   class="btn btn-info mt-2 btn-block"
                 >
-                  Submit Message
+                  Send
                   <i class="fa fa-paper-plane" aria-hidden="true"></i>
                 </button>
               </div>
@@ -251,6 +255,14 @@
               Github
             </a>
             <a
+              href="http://linkedin.com/in/oussama-abaayous/"
+              target="#"
+              class="list-group-item list-group-item-action"
+            >
+              <i class="fa fa-linkedin" aria-hidden="true"></i>
+              Linkedin
+            </a>
+            <a
               href="https://www.instagram.com/mr_abayoss/"
               target="#"
               class="list-group-item list-group-item-action"
@@ -258,27 +270,31 @@
               <i class="fa fa-instagram" aria-hidden="true"></i>
               instagram
             </a>
-            <a
-              href="https://www.facebook.com/Mr.abayoss"
-              target="#"
-              class="list-group-item list-group-item-action"
-            >
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-              Facebook
-            </a>
           </div>
-          <div class="col-md-4 mt-auto slideLeft">
+          <!-- personal info  -->
+          <div class="col-md-4 slideLeft mt-auto pb-2">
+            <h4><i class="fa fa-at"> Email</i></h4>
+            <p>Abaayous.oussama@gmail.com</p>
             <h4><i class="fa fa-map" aria-hidden="true"></i> Address</h4>
             <p>
               Morocco, Rabat
             </p>
-            <h4><i class="fa fa-phone" aria-hidden="true"></i> Phone</h4>
-            <p>+ 212 6 24 71</p>
+            <a
+            class="btn btn-outline-info  mb-3 btn-block"
+            href="https://drive.google.com/file/d/1CL38WecPF1AYKICHFoIdnA-UPRjso_BZ/view"
+            target="#"
+            >
+            <i class="fa fa-file-pdf-o"></i>
+              Curriculum Vitae
+            </a>
+            <!-- <h4><i class="fa fa-phone" aria-hidden="true"></i> Phone</h4>
+            <p>+ 212 6 24 71</p> -->
           </div>
         </div>
       </div>
     </Section>
 
+    <!-- scripts -->
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="assets/js/AnimationOnScroll.js"></script>
     <script src="assets/js/ScrollButton.js"></script>
