border and less animation

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
         <div class="VH SP">
           <div class="row">
             <div class="col-md-8">
-              <h2 class="slideRight">Oussma abaayous</h2>
-              <h6 class="mt-3  slideUp">
+              <h2>Oussma abaayous</h2>
+              <h6 class="mt-3">
                 A Moroccan Web Developer, based in Rabat.
               </h6>
-              <h6 class=" slideUp">
+              <h6>
                 He dedicates his time to develop products and create useful
                 services, mostly built with Angular and Express.
               </h6>
@@ -343,7 +343,7 @@
               </div>
             </form>
             <!-- social Media  -->
-            <h3>Social Media</h3>
+            <h3>More Links</h3>
             <a
               href="https://www.github.com/abayoss"
               target="#"
@@ -363,7 +363,7 @@
             <a
               href="https://www.instagram.com/mr_abayoss/"
               target="#"
-              class="list-group-item list-group-item-action"
+              class="list-group-item list-group-item-action noBorderRadius"
             >
               <i class="fa fa-instagram" aria-hidden="true"></i>
               instagram
@@ -379,7 +379,7 @@
             </p>
             <a
               class="uk-button px-0"
-              href="https://drive.google.com/file/d/1CL38WecPF1AYKICHFoIdnA-UPRjso_BZ/view"
+              href="https://drive.google.com/file/d/19l2DkOxoHzbSHbnAtqT7AstwPCK1Et7X/view?usp=sharing"
               target="#"
             >
               <i class="fa fa-file-pdf-o"></i>
