--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
               <div>
                   <div class="uk-card uk-card-default">
                     <div class="uk-card-media-top">
-                      <img src="https://github.com/abayoss/C-Ado_Snippets/blob/master/Screenshot1.jpg?raw=true" alt="" />
+                      <img src="https://raw.githubusercontent.com/abayoss/express-mongoose/resume-reddit-voting/public/img/app%20images/Screenshot%20(3).jpg" alt="" />
                     </div>
                     <div class="uk-card-body">
-                      <h3 class="uk-card-title">ADO Résume</h3>
+                      <h3 class="uk-card-title">Dreamer</h3>
                       <p>
-                          ADO Crud Application that interacts with an SQL Server Using Different approaches
-                          in order to manipulat diffrent tables
+                        An application to Write and share amazing stories and ideas,
+                        You can write about anything you want! 
                       </p>
                     </div>
                     <div class="uk-position-cover uk-overlay uk-overlay-primary uk-transition-fade"></div>
@@ -143,18 +143,19 @@
                 <div
                   class="uk-panel uk-position-center uk-text-center uk-transition-fade"
                 >
-                  <!-- <p>
+                  <p>
                     <a
-                      class="uk-button btn-warning"
-                      href="https://demo.yootheme.com/themes/joomla/2019/yoko"
-                      data-preview=""
-                      >Preview</a
+                      class="uk-button btn-info"
+                      href="https://dream-vote.herokuapp.com/dreams"
+                      target="#"
+                      >Live</a
                     >
-                  </p> -->
+                  </p>
                   <p>
                     <a
                       class="uk-button tm-button-default"
-                      href="#"
+                      href="https://github.com/abayoss/express-mongoose/blob/resume-reddit-voting/readme.md"
+                      target="#"
                       >Details</a
                     >
                   </p>
@@ -205,7 +206,8 @@
                   <p>
                     <a
                       class="uk-button tm-button-default"
-                      href="#"
+                      href="https://github.com/abayoss/ISIC_School_Scheduler/blob/master/readme.md"
+                      target="#"
                       >Details</a
                     >
                   </p>
@@ -377,14 +379,16 @@
             <p>
               Morocco, Rabat
             </p>
-            <a
-              class="uk-button px-0"
-              href="https://drive.google.com/file/d/19l2DkOxoHzbSHbnAtqT7AstwPCK1Et7X/view?usp=sharing"
-              target="#"
-            >
-              <i class="fa fa-file-pdf-o"></i>
-              Curriculum Vitae
-            </a>
+            <h4>
+              <a
+                class="uk-button px-0"
+                href="https://drive.google.com/file/d/19l2DkOxoHzbSHbnAtqT7AstwPCK1Et7X/view?usp=sharing"
+                target="#"
+              >
+                <i class="fa fa-file-pdf-o"></i>
+                Curriculum Vitae
+              </a>
+            </h4>
             <!-- <h4><i class="fa fa-phone" aria-hidden="true"></i> Phone</h4>
             <p>+ 212 6 24 71</p> -->
           </div>
