--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <div>
                   <div class="uk-card uk-card-default">
                     <div class="uk-card-media-top">
-                      <img src="https://raw.githubusercontent.com/abayoss/express-mongoose/resume-reddit-voting/public/img/app%20images/Screenshot%20(3).jpg" alt="" />
+                      <img src="https://i.imgur.com/ZIi65is.png" alt="" />
                     </div>
                     <div class="uk-card-body">
                       <h3 class="uk-card-title">Dreamer</h3>
