--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <div>
                   <div class="uk-card uk-card-default">
                     <div class="uk-card-media-top">
-                      <img src="https://github.com/abayoss/ISIC_School_Scheduler/blob/master/isic.png?raw=true" alt="" />
+                      <img src="https://i.imgur.com/Tm4MI47.jpg" alt="" />
                     </div>
                     <div class="uk-card-body">
                       <h3 class="uk-card-title">ISIC Scheduler</h3>
